# crossword-hs

./: .dockerignore  .gitignore  CHANGELOG.md  Crossword-spec.hs  Crossword.hs  Dockerfile  FileLoader-spec.hs  FileLoader.hs  LanguageMachine-spec.hs  LanguageMachine.hs  Main.hs  OldWordTrie.hs  README.md  Server.hs  WordTrie-spec.hs  WordTrie.hs  crossword-hs.cabal  docker-compose.yml  heroku.yml  stack.yaml
app/: CrosswordRepl.hs  Server.hs
client/: index.html  script.js
data/: xd.tsv
db/: test.db
server/: index.html
src/: Crossword.hs  Database.hs  LanguageMachine.hs  WordLoader.hs  WordTrie.hs
test/: Crossword-spec.hs  CrosswordSpec.hs  DatabaseSpec.hs  FileLoader-spec.hs  LanguageMachine-spec.hs  LanguageMachineSpec.hs  WordLoaderSpec.hs  WordTrie-spec.hs  WordTrieSpec.hs
test_data/: bad_data.tsv  bad_words.tsv  test1.tsv  test2.tsv
