cabal-version:       >=1.10

name:                crossword-hs
version:             0.1.0.0
license-file:        LICENSE
author:              Erty Seidohl
maintainer:          ertysdl+github@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  build-depends:
    base
    , wai
    , warp
    , http-types
    , containers
    , directory
  exposed-modules:
    Crossword
    WordLoader
    LanguageMachine
    WordTrie
  default-language: Haskell2010

executable server
  main-is: app/Server.hs
  build-depends:
    base
    , wai
    , warp
    , http-types
    , utf8-string
    , bytestring
    , crossword-hs
  default-language:    Haskell2010

executable crossword-repl
  main-is: app/CrosswordRepl.hs
  build-depends:
    base
    , containers
    , directory
    , crossword-hs
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , containers
    , directory
    , hspec
    , QuickCheck
    , crossword-hs
  other-modules:
    CrosswordSpec
    , WordLoaderSpec
    , LanguageMachineSpec
    , WordTrieSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
